--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Hola Santiago!</h1>
-    <h2>Así programa la gente entre dos paises</h2>
-    <h3>Un mensaje más de prueba</h3>
+    <h3>Santiago pata quebra'</h3>
 </body>
 </html>
